--- a/Accesodatos/WEMCOMPRIN1/src/main/webapp/index.html
+++ b/Accesodatos/WEMCOMPRIN1/src/main/webapp/index.html
@@ -12,7 +12,7 @@
     <center>
 
         <a href="Controller?op=doRecuperar">Ver WAllet</a><br/>
-        <a href="Controller?op=doRecuperar">Ver Productos</a><br/>
+        <a href="Controller?op=Recuperarproducto">Ver Productos</a><br/>
     </center>
 </body>
 </html>
