--- a/Accesodatos/WEMCOMPRIN1/src/main/webapp/index.html
+++ b/Accesodatos/WEMCOMPRIN1/src/main/webapp/index.html
@@ -11,8 +11,10 @@
     <body>
     <center>
 
-        <a href="Controller?op=doRecuperar">Ver WAllet</a><br/>
+        <a href="Controller?op=doRecuperar">Ver Wallet</a><br/>
         <a href="Controller?op=Recuperarproducto">Ver Productos</a><br/>
+        <a href="Controller?op=Recuperarvevolucion">Ver Devolucion</a><br/>
+        
     </center>
 </body>
 </html>
