--- a/Accesodatos/WEMCOMPRIN1/src/main/webapp/index.html
+++ b/Accesodatos/WEMCOMPRIN1/src/main/webapp/index.html
@@ -13,7 +13,8 @@
 
         <a href="Controller?op=doRecuperar">Ver Wallet</a><br/>
         <a href="Controller?op=Recuperarproducto">Ver Productos</a><br/>
-        <a href="Controller?op=Recuperarvevolucion">Ver Devolucion</a><br/>
+        <a href="Controller?op=RecuperarCompra">Ver Compra</a><br/>
+        <a href="Controller?op=RecuperarDevolucion">Ver Devolucion</a><br/>
         
     </center>
 </body>
