--- a/Accesodatos/NuevaWEBCOMPRIM/src/main/webapp/index.html
+++ b/Accesodatos/NuevaWEBCOMPRIM/src/main/webapp/index.html
@@ -10,12 +10,14 @@
     </head>
     <body>
     <center>
-
+        <table border="1px">
+        <a href="Controller?op=toNuevoEwallet">Nueva Wallet</a><br/>
         <a href="Controller?op=doRecuperar">Ver Wallet</a><br/>
         <a href="Controller?op=Recuperarproducto">Ver Productos</a><br/>
         <a href="Controller?op=RecuperarCompra">Ver Compra</a><br/>
+         <a href="Controller?op=HacerCompra">Nueva Compra</a><br/>
         <a href="Controller?op=RecuperarDevolucion">Ver Devolucion</a><br/>
-        
+       </table>
     </center>
 </body>
 </html>
